imrpove getting started page

--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -127,39 +127,54 @@
                     <div class="info">
                         <ol class="list-group list-group-flush">
                             <li class="list-group-item">
-                                Purchase the Plugin
+                                1. Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 Purchase the plugin on the official Unreal Engine Marketplace.
                             </p>
                             <li class="list-group-item">
-                                Install the Plugin
+                                2. Install the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In the Epic Games Launcher, the plugin will appear in your Library.</br>
                                 Go to the Library tab and find the plugin and add it to the engine.
                             </p>
                             <li class="list-group-item">
-                                Enable Google Play Saved Games Plugin
+                                3. Enable Google Play Saved Games Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In Unreal Engine, the plugin will be available in the plugins section.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> -> Search for "<span style="font-weight: 500">Google Play Saved Games</span>" and ensure it is enabled.
+                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> -> Search for "<span style="font-weight: 500">Google Play: Saved Games</span>" and ensure it is enabled.
                             </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Enabled.png">
+                                </div>
+                            </div>
                             <li class="list-group-item">
-                                Add Snapshot Support
+                                4. Add Snapshot Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Enable Snapshot Support on Google Play Login.</br>
-                                Go to <span style="font-weight: 500">Project Settings</span> -> <span style="font-weight: 500">Android</span> -> <span style="font-weight: 500">Google Play Services</span> and enable "<span style="font-weight: 500">Enable Snapshots on Google Play login</span>".
+                                Enable Google Play Support and Snapshot Support on Google Play Login.</br>
+                                Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> -> <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and enable: "<span style="font-weight: 500; white-space: nowrap;">Enable Google Play Support</span>" and "<span style="font-weight: 500; white-space: nowrap;">Enable Snapshots on Google Play login</span>".
                             </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Config.png">
+                                </div>
+                            </div>
                             <li class="list-group-item">
-                                Login to Google Play Services
+                                5. Login to Google Play Services
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 On Game startup, add the Unreal Engine provided node (not provided by this plugin) to login to Google Play Services.</br>
                                 The node is called "<span style="font-weight: 500">Show External Login UI</span>".
                             </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img src="../../../images/SavedGames/SavedGames_Plugin_GoogleLogin.png">
+                                </div>
+                            </div>
                         </ol>
                     </div>
                 </div>
