update footer to be more stylish

--- a/plugins/google-play-services/saved-games/saving_game.html
+++ b/plugins/google-play-services/saved-games/saving_game.html
@@ -300,27 +300,31 @@
     <footer class="bg-dark text-light">
         <div class="container py-4">
             <div class="row">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <h5><b>Links</b></h5>
-                    <ul class="list-unstyled mb-0">
-                        <li><a href="../../../index.html" class="text-light">Home</a></li>
-                        <li><a href="../../../contact.html" class="text-light">Contact</a></li>
-                        <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <h5><b>Contact</b></h5>
-                    <ul class="list-unstyled mb-0">
-                        <li class="text-light">Email: porretgaming@gmail.com</li>
-                    </ul>
+                <div class="col-md-4 offset-md-4 text-center">
+                    <img src="../../../images/PorretGaming_Logo_Cut.png" alt="Logo"
+                        style="width: 80px; max-height: 100%;">
                 </div>
             </div>
-        </div>
-        <div class="bg-dark py-2">
-            <div class="container text-center">
-                <p class="text-light mb-0">Copyright &copy; 2023
-                    <a href="#" class="text-light">Porret Gaming</a>
-                </p>
+            <div class="row" style="padding-top: 20px">
+                <div class="col-md-4 offset-md-4 text-center">
+                    <a href="../../../index.html" class="text-light">Home</a>
+                    <span style="color: #2b1c07">|</span>
+                    <a href="../../../contact.html" class="text-light">Contact</a>
+                    <span style="color: #2b1c07">|</span>
+                    <a href="../../../privacy_policy.html" class="text-light">Privacy Policy</a>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 5px">
+                <div class="col-md-4 offset-md-4 text-center">
+                    <hr style="border-color: #ff6000;">
+                </div>
+            </div>
+            <div class="bg-dark py-2">
+                <div class="container text-center">
+                    <p class="text-light mb-0">Copyright &copy; 2023
+                        <a href="../../../index.html" class="text-light">Porret Gaming</a>
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
