--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             aria-haspopup="true" aria-expanded="false">
             Games
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu1" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu1"
+            aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="./Squiggle.html">Squiggle</a></li>
           </ul>
         </li>
@@ -49,8 +50,10 @@
             aria-haspopup="true" aria-expanded="false">
             UE Plugins
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">Google Play: Saved Games</a></li>
+          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
+            aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="plugins/google-play-services/saved-games/overview.html">Google Play:
+                Saved Games</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -61,7 +64,7 @@
   </nav>
 
   <div class="container">
-    <div class="jumbotron" style="margin-top: 50px">
+    <div class="jumbotron" style="margin-top: 100px">
       <h1 class="display-4"><b>Porret Gaming</b></h1>
       </br>
       <p class="lead">Porret Gaming is a one-person game development company founded by an individual developer who is
@@ -150,8 +153,8 @@
 
       <a href="plugins/google-play-services/saved-games/overview.html">
         <div class="overlay-text">
-          <h2 style="white-space: nowrap; font-size: 5vw;">Google Play Services:</h2>
-          <h3 style="white-space: nowrap; font-size: 3vw;">Saved Games</h3>
+          <h2 style="white-space: nowrap; font-size: 4vw;">Google Play Services:</h2>
+          <h3 style="white-space: nowrap; font-size: 2vw;">Saved Games</h3>
         </div>
       </a>
     </div>
@@ -171,27 +174,30 @@
   <footer class="bg-dark text-light">
     <div class="container py-4">
       <div class="row">
-        <div class="col-md-6 mb-4 mb-md-0">
-          <h5><b>Links</b></h5>
-          <ul class="list-unstyled mb-0">
-            <li><a href="index.html" class="text-light">Home</a></li>
-            <li><a href="contact.html" class="text-light">Contact</a></li>
-            <li><a href="privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 mb-4 mb-md-0">
-          <h5><b>Contact</b></h5>
-          <ul class="list-unstyled mb-0">
-            <li class="text-light">Email: porretgaming@gmail.com</li>
-          </ul>
+        <div class="col-md-4 offset-md-4 text-center">
+          <img src="./images/PorretGaming_Logo_Cut.png" alt="Logo" style="width: 80px; max-height: 100%;">
         </div>
       </div>
-    </div>
-    <div class="bg-dark py-2">
-      <div class="container text-center">
-        <p class="text-light mb-0">Copyright &copy; 2023
-          <a href="#" class="text-light">Porret Gaming</a>
-        </p>
+      <div class="row" style="padding-top: 20px">
+        <div class="col-md-4 offset-md-4 text-center">
+          <a href="index.html" class="text-light">Home</a>
+          <span style="color: #2b1c07">|</span>
+          <a href="contact.html" class="text-light">Contact</a>
+          <span style="color: #2b1c07">|</span>
+          <a href="privacy_policy.html" class="text-light">Privacy Policy</a>
+        </div>
+      </div>
+      <div class="row" style="padding-top: 5px">
+        <div class="col-md-4 offset-md-4 text-center">
+          <hr style="border-color: #ff6000;">
+        </div>
+      </div>
+      <div class="bg-dark py-2">
+        <div class="container text-center">
+          <p class="text-light mb-0">Copyright &copy; 2023
+            <a href="#" class="text-light">Porret Gaming</a>
+          </p>
+        </div>
       </div>
     </div>
   </footer>
