--- a/index.html
+++ b/index.html
@@ -10,18 +10,6 @@
   <link rel="icon" type="image/png" href="./images/PorretGaming_Logo_Cut.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
-  <style>
-    #background {
-      background: black;
-      /* overflow: hidden; */
-    }
-
-    #blurred-black {
-      background: black;
-      opacity: 0.7;
-      border-radius: 10px;
-    }
-  </style>
 </head>
 
 <body>
@@ -63,10 +51,30 @@
     </div>
   </nav>
 
+  <div style="position: fixed; z-index: -50;">
+    <div class="row justify-content-between" style="margin-top: -50px; margin-right: -5vw; margin-left: -5vw" >
+      <div class="col overflow-visible">
+        <div class="background fade-top">
+          <img src="images/Squiggle/EasyLevel.png" class="img-fluid" alt="...">
+        </div>
+      </div>
+      <div class="col overflow-visible">
+        <div class="background fade-top">
+          <img src="images/Squiggle/CharacterShop.PNG" class="img-fluid" alt="...">
+        </div>
+      </div>
+      <div class="col overflow-visible">
+        <div class="background fade-top">
+          <img src="images/Squiggle/MediumLevel.png" class="img-fluid" alt="...">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div style="padding-top: 100px"></div>
+
   <div class="container">
-    <div class="jumbotron" style="margin-top: 100px">
-      <h1 class="display-4"><b>Porret Gaming</b></h1>
-      </br>
+    <div class="jumbotron">
       <p class="lead">Porret Gaming is a one-person game development company founded by an individual developer who is
         deeply passionate about creating high-quality, engaging, and unique games. The company's main focus is on
         procedural generation, a technique used in game development to create game content algorithmically, rather than
@@ -75,103 +83,47 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="jumbotron jumbotron-sm" style="margin-top: 10px">
-      <h1 class="display-4"><b>Games</b></h1>
-    </div>
-  </div>
 
   <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause=false>
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div id="background">
-            <img src="images/Squiggle/EasyLevel.png" class="d-block w-100" alt="Image 1" style="opacity: 0.8">
+    <div class="row">
+      <div class="col-6">
+        <a href="./Squiggle.html" class="text-decoration-none">
+          <div class="card text-center">
+            <div class="card-header" style="background-color: #e9ecef;">
+              <h5 style="margin-bottom: 0;">Mobile Game</h5>
+            </div>
+            <img src="images/Squiggle/MainMenu.png" class="card-img-top" alt="...">
+            <div class="card-body"  style="background-color: #e9ecef;">
+              <h5 class="card-title">Squiggle</h5>
+              <p class="card-text">
+                A free procedurally generated endless runner with high scores, achievements and quests.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <div id="background">
-            <img src="images/Squiggle/MainMenu.png" class="d-block w-100" alt="Image 2" style="opacity: 0.8">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div id="background">
-            <img src="images/Squiggle/MediumLevel.png" class="d-block w-100" alt="Image 3" style="opacity: 0.8">
-          </div>
-        </div>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
-      <a href="Squiggle.html">
-        <div class="overlay-text">
-          <h1>Squiggle</h1>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="jumbotron jumbotron-sm" style="margin-top: 50px">
-      <h1 class="display-4"><b>Plugins</b></h1>
-    </div>
-  </div>
-
-  <div class="container">
-    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel" data-interval="3000"
-      data-pause=false>
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div id="background">
-            <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="d-block w-100" alt="Image 1"
-              style="opacity: 0.8">
+      <div class="col-6">
+        <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
+          <div class="card text-center">
+            <div class="card-header" style="background-color: #e9ecef;">
+              <h5 style="margin-bottom: 0;">Unreal Engine Plugin</h5>
+            </div>
+            <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" class="card-img-top" alt="...">
+            <div class="card-body"  style="background-color: #e9ecef;">
+              <h5 class="card-title">Google Play Services: Saved Games</h5>
+              <p class="card-text">
+                Pack of blueprint nodes exposing Google Play's cloud-saving service to Android Game Developers using Unreal Engine.
+              </p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
-      <a href="plugins/google-play-services/saved-games/overview.html">
-        <div class="overlay-text">
-          <h2 style="white-space: nowrap; font-size: 4vw;">Google Play Services:</h2>
-          <h3 style="white-space: nowrap; font-size: 2vw;">Saved Games</h3>
-        </div>
-      </a>
     </div>
   </div>
 
-  <div class="container">
-    <div class="jumbotron" style="margin-top: 50px">
-      <p class="lead">We are working towards building many more games for your enjoyment.</p>
-      </br>
-      <p class="lead">
-        We also specialise in building Unreal Engine plugins.</br>
-        These plugins are currently under development, but will become available shortly.
-      </p>
-    </div>
-  </div>
+  <div style="padding-top: 210px"></div>
 
-  <footer class="bg-dark text-light">
+  <footer class="bg-dark text-light" style="margin-left: -5vw; margin-right: -5vw">
     <div class="container py-4">
       <div class="row">
         <div class="col-md-4 offset-md-4 text-center">
