--- a/plugins/google-play-services/saved-games/saving_game.html
+++ b/plugins/google-play-services/saved-games/saving_game.html
@@ -52,10 +52,10 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" style="margin-left: 7px">
             <!-- Side Navigation Bar -->
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style="margin-top: 20px">
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar sidebar-custom">
+                <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
