--- a/plugins/google-play-services/saved-games/snapshot_error.html
+++ b/plugins/google-play-services/saved-games/snapshot_error.html
@@ -52,9 +52,9 @@
     </nav>
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
-        <div class="row">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky" style="margin-top: 20px">
+        <div class="row" style="margin-left: 7px">
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar sidebar-custom">
+                <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link disabled">Developer Guidelines</a>
@@ -216,7 +216,7 @@
                         </table>
                     </div>
                 </div>
-                <div style="margin-bottom: 150px">
+                <div style="margin-bottom: 400px">
                 </div>
             </main>
         </div>
