improve documentation style

--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style.css">
 </head>
 
-<body>
+<body class="documentation-body">
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
@@ -53,7 +53,7 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar sidebar-custom">
+            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -137,28 +137,27 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2">Getting Started</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <ol class="list-group list-group-flush">
                             <li class="list-group-item">
-                                1. Purchase the Plugin
+                                Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 Purchase the plugin on the official Unreal Engine Marketplace.
                             </p>
                             <li class="list-group-item">
-                                2. Install the Plugin
+                                Install the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In the Epic Games Launcher, the plugin will appear in your Library.</br>
                                 Go to the Library tab and find the plugin and add it to the engine.
                             </p>
                             <li class="list-group-item">
-                                3. Enable Google Play Saved Games Plugin
+                                Enable Google Play Saved Games Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 In Unreal Engine, the plugin will be available in the plugins section.</br>
@@ -172,7 +171,7 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
-                                4. Add Snapshot Support
+                                Add Snapshot Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 Enable Google Play Support and Snapshot Support on Google Play Login.</br>
@@ -189,7 +188,7 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
-                                5. Login to Google Play Services
+                                Login to Google Play Services
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 On Game startup, add the Unreal Engine provided node (not provided by this plugin) to
