--- a/plugins/google-play-services/saved-games/resolution_policy.html
+++ b/plugins/google-play-services/saved-games/resolution_policy.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style.css">
 </head>
 
-<body>
+<body class="documentation-body">
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
@@ -53,7 +53,7 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar sidebar-custom">
+            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -137,8 +137,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2">Resolution Policy</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
@@ -151,7 +150,7 @@
                 </div>
                 <div style="padding-top: 30px">
                     <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <table class="table table-striped table-bordered"
+                        <table class="table table-striped table-bordered table-documentation"
                             style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
                                 <tr>
