--- a/plugins/google-play-services/saved-games/snapshot_metadata.html
+++ b/plugins/google-play-services/saved-games/snapshot_metadata.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../style.css">
 </head>
 
-<body>
+<body class="documentation-body">
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="../../../index.html">
@@ -53,7 +53,7 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar sidebar-custom">
+            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
-                    <table class="table table-striped table-bordered"
+                    <table class="table table-striped table-bordered table-documentation"
                         style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                         <thead class="thead-dark">
                             <tr>
