add transparent outter glow to doc titles

--- a/plugins/google-play-services/saved-games/snapshot_metadata.html
+++ b/plugins/google-play-services/saved-games/snapshot_metadata.html
@@ -139,7 +139,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Snapshot Metadata</h1>
+                    <h1 class="h2 text-white-shadow">Snapshot Metadata</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
